ADD curso cypress básico aula 08 à 09

--- a/basico/package.json
+++ b/basico/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "basico",
+  "name": "cypress-basico",
   "version": "1.0.0",
-  "description": "\u001b[A\u001b[Bcypress Básico\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C",
+  "description": "Curso de cypress básico",
   "main": "index.js",
   "scripts": {
     "test": "cypress run"
